--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
 # In Windows, build-name is used as the major, minor, and patch parts
 # of the product and file versions while build-number is used as the build suffix.
-version: 1.0.4+5
+version: 1.0.15+16
 
 environment:
   sdk: '>=3.1.3 <4.0.0'
@@ -54,6 +54,13 @@ dependencies:
   focus_detector: ^2.0.1
   file_picker: ^8.1.3
   http: ^1.2.2
+  cached_network_image: ^3.4.1
+  flutter_pdfview: ^1.3.4
+  syncfusion_flutter_pdfviewer: ^28.1.35
+  url_launcher: ^6.3.1
+  google_sign_in: ^6.2.2
+  firebase_auth: ^5.3.4
+  firebase_core: ^3.9.0
 
 dev_dependencies:
   flutter_test:
